infra/traefik/custom-resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      hostname: "traefik-traefik.aardvark-symmetric.ts.net"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
    - name: web
      port: 80
      protocol: HTTP
